before Extension branch

--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "css-loader": "^3.4.0"
   }
 }
