--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "jquery": "^3.5.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-html-parser": "^2.0.2",
     "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0"
   },
   "scripts": {
