--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-html-parser": "^2.0.2",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.3.0"
+    "react-scripts": "^3.3.0",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
