--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.1.0",
+    "react-redux": "^7.1.3",
+    "@babel/helper-call-delegate": "^7.10.4",
     "jquery": "^3.5.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
