--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.1.0",
-    "react-redux": "^7.1.3",
     "@babel/helper-call-delegate": "^7.10.4",
+    "@reduxjs/toolkit": "^1.1.0",
+    "axios": "^0.19.2",
     "jquery": "^3.5.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-html-parser": "^2.0.2",
+    "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
