--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@babel/helper-call-delegate": "^7.10.4",
     "@reduxjs/toolkit": "^1.1.0",
     "axios": "^0.19.2",
+    "babel-loader": "8.1.0",
+    "babel-plugin-named-asset-import": "^0.3.7",
     "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
     "react": "^16.11.0",
@@ -39,6 +41,7 @@
     ]
   },
   "devDependencies": {
-    "css-loader": "^3.4.0"
+    "css-loader": "^3.4.0",
+    "webpack-cli": "^4.2.0"
   }
 }
