--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "babel-plugin-named-asset-import": "^0.3.7",
     "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
+    "react": "17.0",
+    "react-dom": "17.0",
     "react-html-parser": "^2.0.2",
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "save": "^2.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
