--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
     },
     "content_scripts": [
         {
-            "matches": ["https://*.gatsbyjs.com/*"],
+            "matches": ["<all_urls>", "https://*.gatsbyjs.com/*"],
             "js": ["content.chunk.js"]
         }
     ],
