--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
     "redux": "^4.0.5",
-    "save": "^2.4.0"
+    "save": "^2.4.0",
+    "web-ext": "^5.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
