--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-scripts": "^3.3.0",
     "redux": "^4.0.5",
     "save": "^2.4.0",
-    "web-ext": "^5.3.0"
+    "web-ext": "^5.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -45,6 +45,7 @@
   },
   "devDependencies": {
     "css-loader": "^3.4.0",
+    "pdfjs-dist": "^2.6.347",
     "sass-loader": "^10.1.0",
     "url-loader": "^4.1.1",
     "webpack": "4.42.0",
