--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -29,7 +29,7 @@
     "@babel/helper-call-delegate": "^7.10.4",
     "@reduxjs/toolkit": "^1.1.0",
     "@types/react": "^17.0.2",
-    "@wrp/reading-core": "file:./packages/reading-core",
+    "@wrp/reading-core": "file:../reading-core",
     "babel-loader": "8.1.0",
     "babel-plugin-named-asset-import": "^0.3.7",
     "jquery": "^3.5.1",
