--- a/packages/reading-core/package.json
+++ b/packages/reading-core/package.json
@@ -5,7 +5,7 @@
   "author": "Baotlake baotlake@gmail.com",
   "license": "SEE LISENSE IN LISENSE.md",
   "scripts": {
-    "start": "webpack --config webpack.config.js --watch",
+    "start": "webpack --config webpack.dev.js --watch",
     "build": "webpack --config webpack.config.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
