minimum availabel version

--- a/.gitignore
+++ b/.gitignore
@@ -2,21 +2,17 @@
 
 # dependencies
 node_modules
-/.pnp
-.pnp.js
-yarn-error.log
-
-# testing
-/coverage
-/test
 
 # production
 build
 dist
+.next
+
 
 # misc
 .idea
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
