--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -32,7 +32,8 @@
         ]
     },
     "dependencies": {
-        "hammerjs": "^2.0.8"
+        "hammerjs": "^2.0.8",
+        "lodash": "^4.17.21"
     },
     "devDependencies": {
         "babel-loader": "8.1.0",
