--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -29,7 +29,9 @@
         ]
     },
     "dependencies": {
-        "@material-ui/core": "^4.11.4"
+        "@material-ui/core": "^4.11.4",
+        "@material-ui/lab": "^4.0.0-alpha.58",
+        "material-ui": "^0.20.2"
     },
     "devDependencies": {
         "babel-loader": "8.1.0",
