--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -16,7 +16,7 @@
         "resolveJsonModule": true,
         "isolatedModules": true,
         // "noEmit": true,
-        "jsx": "react-jsx"
+        "jsx": "react-jsx",
     },
     "include": ["src/**/*"],
     "exclude": ["node_modules", "dist"]
