--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-react": "^7.23.2",
     "jquery": "^3.5.1",
     "next": "^10.1.3",
+    "next-pwa": "^5.2.21",
     "node-sass": "^5.0.0",
     "pdfjs-dist": "^2.6.347",
     "react": "17.0",
