--- a/package.json
+++ b/package.json
@@ -1,44 +1,44 @@
 {
-  "name": "wordreadingpro",
-  "version": "0.0.1",
-  "main": "index.js",
-  "repository": "https://github.com/BaotLake/wordreadingpro.git",
-  "author": "Baot Lake <BoatLake@gmail.com>",
-  "license": "SEE LICENSE IN LICENSE.md",
-  "private": true,
-  "workspaces": [
-    "packages/*"
-  ],
-  "scripts": {
-    "netlify-build": "cd ./packages/reading-core; yarn build; cd ../website; yarn build;"
-  },
-  "dependencies": {
-    "@babel/helper-call-delegate": "^7.10.4",
-    "@reduxjs/toolkit": "^1.1.0",
-    "@types/react": "^17.0.2",
-    "babel-loader": "8.1.0",
-    "babel-plugin-named-asset-import": "^0.3.7",
-    "jquery": "^3.5.1",
-    "node-sass": "^4.14.1",
-    "react": "17.0",
-    "react-dom": "17.0",
-    "react-html-parser": "^2.0.2",
-    "react-redux": "^7.1.3",
-    "react-scripts": "4.0.1",
-    "save": "^2.4.0",
-    "style-loader": "^2.0.0"
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.25.0",
-    "@typescript-eslint/parser": "^4.25.0",
-    "copy-webpack-plugin": "^7.0.0",
-    "css-loader": "^3.4.0",
-    "eslint": "^7.27.0",
-    "eslint-plugin-react": "^7.23.2",
-    "pdfjs-dist": "^2.6.347",
-    "raw-loader": "^4.0.2",
-    "sass-loader": "^10.1.0",
-    "typescript": "^4.1.5",
-    "url-loader": "^4.1.1"
-  }
+    "name": "wordreadingpro",
+    "version": "0.0.1",
+    "main": "index.js",
+    "repository": "https://github.com/BaotLake/wordreadingpro.git",
+    "author": "Baot Lake <BoatLake@gmail.com>",
+    "license": "SEE LICENSE IN LICENSE.md",
+    "private": true,
+    "workspaces": [
+        "packages/*"
+    ],
+    "scripts": {
+        "build": "cd ./packages/core; yarn build; cd ../ui; yarn build; cd ../website; yarn build;"
+    },
+    "dependencies": {
+        "jquery": "^3.5.1",
+        "react": "17.0",
+        "react-dom": "17.0"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.14.6",
+        "@types/react": "^17.0.11",
+        "@typescript-eslint/eslint-plugin": "^4.25.0",
+        "@typescript-eslint/parser": "^4.25.0",
+        "babel-loader": "^8.2.2",
+        "copy-webpack-plugin": "^7.0.0",
+        "css-loader": "^3.4.0",
+        "dotenv": "^10.0.0",
+        "eslint": "^7.27.0",
+        "eslint-plugin-react": "^7.23.2",
+        "node-sass": "4.14.1",
+        "pdfjs-dist": "^2.6.347",
+        "raw-loader": "^4.0.2",
+        "sass-loader": "^10.1.0",
+        "style-loader": "^3.0.0",
+        "terser-webpack-plugin": "^5.1.4",
+        "ts-loader": "^9.2.3",
+        "typescript": "^4.1.5",
+        "url-loader": "^4.1.1",
+        "webpack": "^5.40.0",
+        "webpack-bundle-analyzer": "^4.4.2",
+        "webpack-cli": "^4.7.2"
+    }
 }
