--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -33,23 +33,7 @@
         "@material-ui/lab": "^4.0.0-alpha.58",
         "material-ui": "^0.20.2"
     },
-    "devDependencies": {
-        "babel-loader": "8.1.0",
-        "babel-plugin-named-asset-import": "^0.3.7",
-        "copy-webpack-plugin": "^8.0.0",
-        "css-loader": "^3.4.0",
-        "esbuild-loader": "^2.9.2",
-        "pdfjs-dist": "^2.6.347",
-        "raw-loader": "^4.0.2",
-        "style-loader": "^2.0.0",
-        "terser-webpack-plugin": "5",
-        "ts-loader": "^8.0.18",
-        "typescript": "^4.1.5",
-        "url-loader": "^4.1.1",
-        "webpack": "5.25.1",
-        "webpack-bundle-analyzer": "^4.4.0",
-        "webpack-cli": "^4.5.0"
-    },
+    "devDependencies": {},
     "babel": {
         "presets": [
             "@babel/preset-react"
