--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -30,28 +30,7 @@
     "@babel/helper-call-delegate": "^7.10.4",
     "@reduxjs/toolkit": "^1.1.0",
     "@types/react": "^17.0.2",
-    "babel-loader": "8.1.0",
-    "babel-plugin-named-asset-import": "^0.3.7",
-    "eslint-plugin-react": "^7.23.2",
-    "jquery": "^3.5.1",
-    "next": "^10.1.3",
-    "next-pwa": "^5.2.21",
-    "node-sass": "^5.0.0",
-    "pdfjs-dist": "^2.6.347",
-    "react": "17.0",
-    "react-dom": "17.0",
-    "react-html-parser": "^2.0.2",
-    "react-redux": "^7.1.3",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "4.0.1",
-    "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.9",
-    "sass-loader": "^10.1.0",
-    "save": "^2.4.0",
-    "style-loader": "^2.0.0",
-    "typescript": "^4.1.5",
-    "web-ext": "^5.3.0"
+    "next": "^10.1.3"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.12.13",
@@ -59,15 +38,6 @@
     "@types/react-dom": "^17.0.1",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
-    "copy-webpack-plugin": "^7.0.0",
-    "css-loader": "^3.4.0",
-    "path": "^0.12.7",
-    "pdfjs-dist": "^2.6.347",
-    "raw-loader": "^4.0.2",
-    "ts-loader": "^9.2.2",
-    "typescript": "^4.2.4",
-    "url-loader": "^4.1.1",
-    "webpack": "^5.36.2",
-    "webpack-cli": "^4.6.0"
+    "path": "^0.12.7"
   }
 }
