--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
         "start": "cd ./packages/website; yarn start"
     },
     "dependencies": {
+        "@material-ui/core": "^4.11.4",
+        "@material-ui/lab": "^4.0.0-alpha.58",
         "jquery": "^3.5.1",
+        "material-ui": "^0.20.2",
         "react": "17.0",
         "react-dom": "17.0"
     },
     "devDependencies": {
         "@babel/core": "^7.14.6",
+        "@babel/preset-react": "^7.14.5",
         "@types/react": "^17.0.11",
+        "@types/react-dom": "^17.0.8",
         "@typescript-eslint/eslint-plugin": "^4.25.0",
         "@typescript-eslint/parser": "^4.25.0",
         "babel-loader": "^8.2.2",
