--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -27,17 +27,8 @@
     ]
   },
   "dependencies": {
-    "@babel/helper-call-delegate": "^7.10.4",
-    "@reduxjs/toolkit": "^1.1.0",
-    "@types/react": "^17.0.2",
-    "next": "^10.1.3"
+    "next": "^10.1.3",
+    "next-pwa": "^5.2.21"
   },
-  "devDependencies": {
-    "@babel/preset-react": "^7.12.13",
-    "@types/lodash": "^4.14.168",
-    "@types/react-dom": "^17.0.1",
-    "@types/react-redux": "^7.1.16",
-    "@types/react-router-dom": "^5.1.7",
-    "path": "^0.12.7"
-  }
+  "devDependencies": {}
 }
