--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@material-ui/core": "^4.11.4",
         "@material-ui/lab": "^4.0.0-alpha.58",
         "jquery": "^3.5.1",
+        "lodash": "^4.17.21",
         "material-ui": "^0.20.2",
         "react": "17.0",
         "react-dom": "17.0"
