--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "license": "SEE LICENSE IN LICENSE.md",
     "private": true,
     "workspaces": [
-        "packages/*"
+        "packages/core",
+        "packages/ui",
+        "packages/website"
     ],
     "scripts": {
         "build": "cd ./packages/core; yarn build; cd ../ui; yarn build; cd ../website; yarn build;",
