--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "module": "CommonJS",
+    "module": "commonjs",
     // "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
     "outDir":"./dist",
