--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -27,8 +27,13 @@
     ]
   },
   "dependencies": {
+    "babel-plugin-lodash": "^3.3.4",
+    "lodash-es": "^4.17.21",
     "next": "^10.1.3",
     "next-pwa": "^5.2.21"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/lodash-es": "^4.17.4",
+    "lodash-webpack-plugin": "^0.11.6"
+  }
 }
