--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -27,6 +27,7 @@
     ]
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^3.7.1",
     "babel-plugin-lodash": "^3.3.4",
     "lodash-es": "^4.17.21",
     "next": "^10.1.3",
