--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -13,6 +13,9 @@
     "main": "dist/index.js",
     "module": "dist/index.js",
     "typings": "dist/index.d.ts",
+    "files": [
+        "dist/*"
+    ],
     "eslintConfig": {
         "extends": "react-app"
     },
