--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -10,19 +10,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
   "dependencies": {
+    "@wrp/core": "*",
+    "@wrp/ui": "*",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "webpack": "5.25.1",
@@ -31,6 +21,7 @@
   "devDependencies": {
     "@types/chrome": "^0.0.133",
     "copy-webpack-plugin": "^8.0.0",
+    "html-webpack-plugin": "^5.3.2",
     "ts-loader": "^8.0.18",
     "web-ext": "^5.3.0",
     "webpack": "^5.25.1"
