--- a/packages/extension/src/manifest_firefox.json
+++ b/packages/extension/src/manifest_firefox.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "name": "Word Reading Pro",
+  "name": "Deep Reading",
   "version": "1.0",
   "description": "",
   "icons": {
@@ -16,6 +16,10 @@
       "js": ["content.chunk.js"]
     }
   ],
+  "browser_action": {
+    "default_title": "Deep Reading",
+    "default_popup": "popup.html"
+  },
   "permissions": ["webRequest", "<all_urls>"],
   "browser_specific_settings": {
     "gecko": {
