--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "start:core": "cd ./packages/core; yarn start;",
     "start:ui": "cd ./packages/ui; yarn start;",
     "start:website": "cd ./packages/website; yarn dev;",
-    "start:extension": "cd ./packages/extension; yarn start;"
+    "start:extension": "cd ./packages/extension; yarn start;",
+    "build:extension": "cd ./packages/extension; yarn build;"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.4",
@@ -26,6 +27,7 @@
     "material-ui": "^0.20.2",
     "react": "17.0",
     "react-dom": "17.0",
+    "react-jss": "^10.7.1",
     "sass": "^1.35.2"
   },
   "devDependencies": {
