--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -30,11 +30,13 @@
     "@netlify/plugin-nextjs": "^3.7.1",
     "babel-plugin-lodash": "^3.3.4",
     "lodash-es": "^4.17.21",
-    "next": "^10.1.3",
-    "next-pwa": "^5.2.21"
+    "next": "^11.1.2",
+    "next-pwa": "^5.2.21",
+    "nprogress": "^0.2.0"
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.4",
+    "@types/nprogress": "^0.2.0",
     "lodash-webpack-plugin": "^0.11.6"
   }
 }
