--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "build:extension": "cd ./packages/extension; yarn build;"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.4",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.58",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@mui/icons-material": "^5.0.3",
+    "@mui/lab": "^5.0.0-alpha.50",
+    "@mui/material": "^5.0.3",
+    "@mui/styles": "^5.0.1",
     "classnames": "^2.3.1",
     "jquery": "^3.5.1",
     "lodash": "^4.17.21",
@@ -28,13 +31,14 @@
     "react": "17.0",
     "react-dom": "17.0",
     "react-jss": "^10.7.1",
+    "react-scripts": "^4.0.3",
     "sass": "^1.35.2"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
     "@babel/preset-react": "^7.14.5",
-    "@types/react": "^17.0.11",
-    "@types/react-dom": "^17.0.8",
+    "@types/react": "^17.0.27",
+    "@types/react-dom": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
     "@typescript-eslint/parser": "^4.25.0",
     "babel-loader": "^8.2.2",
@@ -43,6 +47,7 @@
     "dotenv": "^10.0.0",
     "eslint": "^7.27.0",
     "eslint-plugin-react": "^7.23.2",
+    "glob-parent": "^5.1.2",
     "pdfjs-dist": "^2.6.347",
     "raw-loader": "^4.0.2",
     "sass-loader": "^10.1.0",
