--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -27,16 +27,19 @@
     ]
   },
   "dependencies": {
-    "@netlify/plugin-nextjs": "^3.7.1",
+    "@netlify/plugin-nextjs": "^3.9.2",
     "babel-plugin-lodash": "^3.3.4",
     "lodash-es": "^4.17.21",
     "next": "^11.1.2",
     "next-pwa": "^5.2.21",
-    "nprogress": "^0.2.0"
+    "nprogress": "^0.2.0",
+    "react": "17.0",
+    "react-dom": "17.0"
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.4",
     "@types/nprogress": "^0.2.0",
-    "lodash-webpack-plugin": "^0.11.6"
+    "lodash-webpack-plugin": "^0.11.6",
+    "netlify-cli": "^6.13.2"
   }
 }
