--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -14,7 +14,8 @@
     "module": "dist/index.js",
     "typings": "dist/index.d.ts",
     "files": [
-        "dist/*"
+        "dist/*",
+        "src/*"
     ],
     "eslintConfig": {
         "extends": "react-app"
