--- a/packages/website/public/manifest.json
+++ b/packages/website/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Word Reading Pro | 划词阅读",
-  "short_name": "Word Reading Pro",
+  "name": "Deep Reading",
+  "short_name": "Deep Reading",
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
