--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -14,6 +14,7 @@
     "module": "dist/index.js",
     "typings": "dist/index.d.ts",
     "files": [
+        "src/*",
         "dist/*"
     ],
     "eslintConfig": {
