--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,23 +1,40 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    // "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "outDir":"./dist",
+    "target": "es5",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "outDir": "./dist",
     "declaration": true,
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-//     "strict": true,
+    "strict": false,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
+    "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
-     "noEmit": false,
+    "isolatedModules": false,
+    "noImplicitAny": true,
+    "removeComments": true,
+    "preserveConstEnums": true,
+    "sourceMap": true,
     "jsx": "react-jsx",
+    "paths": {
+      "@wrp/ui": [
+        "../ui/src"
+      ]
+    }
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "**/*.spec.ts"
+  ]
 }
