--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@zxing/browser": "^0.0.10",
     "@zxing/library": "^0.18.6",
     "classnames": "^2.3.1",
+    "esbuild": "^0.14.10",
     "jquery": "^3.5.1",
     "lodash": "^4.17.21",
     "material-ui": "^0.20.2",
@@ -34,7 +35,8 @@
     "react-dom": "17.0",
     "react-jss": "^10.7.1",
     "react-scripts": "^4.0.3",
-    "sass": "^1.35.2"
+    "sass": "^1.35.2",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
