fix: strict type

--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -9,7 +9,7 @@
         "skipLibCheck": true,
         "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
-//         "strict": true,
+        "strict": true,
         "forceConsistentCasingInFileNames": true,
         "noFallthroughCasesInSwitch": true,
         "moduleResolution": "node",
