--- a/packages/extension/tsconfig.json
+++ b/packages/extension/tsconfig.json
@@ -1,12 +1,11 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es6",
     "lib": [
       "dom",
       "dom.iterable",
       "esnext"
     ],
-    "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
@@ -17,17 +16,16 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": false,
-    "noImplicitAny": true,
     "removeComments": true,
     "preserveConstEnums": true,
     "sourceMap": true,
     "jsx": "react-jsx",
     "paths": {
       "@wrp/core": [
-        "../core/src"
+        "../core/es"
       ],
       "@wrp/ui": [
-        "../ui/src"
+        "../ui/es"
       ]
     }
   },
