--- a/package.json
+++ b/package.json
@@ -35,9 +35,7 @@
     "react": "17.0",
     "react-dom": "17.0",
     "react-jss": "^10.7.1",
-    "react-scripts": "^4.0.3",
-    "sass": "^1.35.2",
-    "styled-components": "^5.3.3"
+    "sass": "^1.35.2"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
