--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -8,7 +8,8 @@
         "start:esbuild": "tsc --emitDeclarationOnly & NODE_ENV=development node build.js",
         "start:rollup": "rollup -c rollup.config.js -w",
         "start": "yarn start:rollup",
-        "build": "tsc --emitDeclarationOnly; NODE_ENV=production node build.js"
+        "build:esbuild": "tsc --emitDeclarationOnly; NODE_ENV=production node build.js",
+        "build": "rollup -c rollup.config.js"
     },
     "main": "es/index.js",
     "module": "es/index.js",
