--- a/package.json
+++ b/package.json
@@ -67,5 +67,8 @@
     "webpack": "^5.40.0",
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.7.2"
+  },
+  "devEngines": {
+    "node": "^12.22.0 || 13.x || 14.x || 15.x || 16.x"
   }
 }
