wrp/ui tsconfig

--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -22,11 +22,11 @@
         // "noEmit": true,
         "jsx": "react-jsx",
         "baseUrl": "./",
-        // "paths": {
-        //     "@wrp/core": [
-        //         "../core"
-        //     ],
-        // }
+        "paths": {
+            "@wrp/core": [
+                "../core"
+            ],
+        }
     },
     "include": [
         "./src/**/*"
