fix: node <16 EventTarget not defined

--- a/package.json
+++ b/package.json
@@ -69,6 +69,6 @@
     "webpack-cli": "^4.7.2"
   },
   "devEngines": {
-    "node": "^12.22.0 || 13.x || 14.x || 15.x || 16.x"
+    "node": ">=16.13.0"
   }
 }
