--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "packages/*"
   ],
   "scripts": {
-    "build:core": "cd ./packages/core; yarn build",
-    "build": "cd ./packages/ui; yarn build; cd ../core; yarn build; cd ../website; yarn build",
-    "build:extension": "cd ./packages/core; yarn build; cd ../ui; yarn build; cd ../extension; yarn build",
-    "start:website": "cd ./packages/website; yarn dev",
-    "start:extension": "cd ./packages/extension; yarn start",
-    "start": "yarn start:website",
-    "dev": "cd ./packages/core; yarn start & cd ../ui; yarn start"
+    "build:website": "cd ./packages/ui; yarn build; cd ../core; yarn build; cd ../inject; yarn build; cd ../website; yarn build",
+    "build:extension": "cd ./packages/core; yarn build; cd ../ui; yarn build; cd ../inject; yarn build; cd ../extension; yarn build",
+    "build": "yarn build:website",
+    "dev:website": "cd ./packages/website; yarn dev",
+    "dev:extension": "cd ./packages/extension; yarn start",
+    "dev": "yarn dev:website",
+    "dev:a": "cd ./packages/core; yarn start & cd ../ui; yarn start"
   },
   "dependencies": {
     "@emotion/react": "^11.4.1",
@@ -43,10 +43,12 @@
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-replace": "^3.0.1",
+    "@rollup/plugin-typescript": "^8.3.0",
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
     "@typescript-eslint/parser": "^4.25.0",
+    "acorn-jsx": "^5.3.2",
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^3.4.0",
