--- a/packages/extension/res/firefox_v3/manifest.json
+++ b/packages/extension/res/firefox_v3/manifest.json
@@ -1,5 +1,5 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "__MSG_extension_name__",
   "version": "0.0.2",
   "description": "__MSG_extension_description__",
@@ -8,8 +8,7 @@
     "48": "./logo.png"
   },
   "background": {
-    "scripts": ["background.chunk.js"],
-    "persistent": false
+    "service_worker": "worker.js"
   },
   "content_scripts": [
     {
@@ -18,16 +17,11 @@
       "js": ["content.chunk.js"]
     }
   ],
-  "browser_action": {
+  "action": {
     "default_title": "Deep Reading",
     "default_popup": "popup.html"
   },
   "options_page": "popup.html",
-  "permissions": ["tabs"],
-  "web_accessible_resources": [
-    {
-      "resources": ["content-frame.html", "content-frame.chunk.js"],
-      "matches": ["<all_urls>"]
-    }
-  ]
+  "permissions": ["webRequest", "<all_urls>", "storage"],
+  "web_accessible_resources": ["content-frame.html", "content-frame.chunk.js"]
 }
