--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@mui/lab": "^5.0.0-alpha.50",
     "@mui/material": "^5.0.3",
     "@mui/styles": "^5.0.1",
+    "@reduxjs/toolkit": "^1.8.0",
     "@zxing/browser": "^0.0.10",
     "@zxing/library": "^0.18.6",
+    "bowser": "^2.11.0",
     "classnames": "^2.3.1",
     "esbuild": "^0.14.10",
     "jquery": "^3.5.1",
@@ -36,6 +38,8 @@
     "react": "17.0",
     "react-dom": "17.0",
     "react-jss": "^10.7.1",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
     "sass": "^1.35.2"
   },
   "devDependencies": {
