--- a/package.json
+++ b/package.json
@@ -49,8 +49,10 @@
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-replace": "^3.0.1",
     "@rollup/plugin-typescript": "^8.3.0",
+    "@svgr/webpack": "^6.2.1",
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
+    "@types/styled-components": "^5.1.24",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
     "@typescript-eslint/parser": "^4.25.0",
     "acorn-jsx": "^5.3.2",
@@ -66,8 +68,10 @@
     "rollup": "^2.67.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.31.2",
+    "rollup-plugin-visualizer": "^5.6.0",
     "sass-loader": "^10.1.0",
     "style-loader": "^3.0.0",
+    "styled-components": "^5.3.3",
     "terser-webpack-plugin": "^5.1.4",
     "ts-loader": "^9.2.3",
     "typescript": "^4.1.5",
