--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "NODE_ENV=development webpack --config webpack.config.js --watch --progress",
     "start:worker": "NODE_ENV=development node build.js",
-    "build": "NODE_ENV=production node build.js; webpack --config webpack.config.js"
+    "build": "NODE_ENV=production node build.js; webpack --config webpack.config.js",
+    "zip": "cd dist/chrome_v3; zip ../chrome_v3.zip -r *"
   },
   "dependencies": {
     "@wrp/core": "*",
